# ComfyUI-Frame-Interpolation

./: .gitignore  .gitmodules  README.md  __init__.py  config.yaml  install-cupy.py  install.bat  install.py  install.sh  other_nodes.py  pyproject.toml  requirements-for-portable.txt  requirements-no-cupy.txt  requirements-with-cupy.txt  requirements.txt  test.py  utils.py  vfi_utils.py
models/: node_class_mappings.py
models/amt/: __init__.py  amt_arch.py
models/cain/: __init__.py  cain_encdec_arch.py  cain_noca_arch.py
models/eisai/: __init__.py  eisai_arch.py
models/esai/: __init__.py  eisai.py  eisai_arch.py
models/film/: __init__.py
models/flavr/: __init__.py  flavr_arch.py
models/gmfss/: GMFSS_Fortuna_arch.py  GMFSS_Fortuna_union_arch.py
models/gmfss_fortuna/: GMFSS_Fortuna_arch.py  GMFSS_Fortuna_union_arch.py  __init__.py
models/ifrnet/: IFRNet.py  IFRNet_L_arch.py  IFRNet_S_arch.py  __init__.py
models/ifunet/: IFUNet.py  IFUNet_arch.py  __init__.py
models/m2m/: M2M_arch.py  __init__.py
models/m2m-vfi/: M2M.py  M2M_arch.py
models/ops/: __init__.py  costvol.py  sepconv.py  softsplat.py
models/rife/: __init__.py  rife.py  rife_arch.py  rife_arch_47.py
models/sepconv/: __init__.py  sepconv_enhanced.py
models/stmfnet/: __init__.py  stmfnet_arch.py
models/xvfi/: __init__.py  xvfi_arch.py
modules/gmfss/: __init__.py
vfi_models/amt/: __init__.py
vfi_models/atm/: __init__.py  attention.py  flow_warp.py  network_base.py  network_lite.py
vfi_models/cain/: __init__.py
vfi_models/eisai/: __init__.py
vfi_models/film/: __init__.py
(+27 files in other folders)
