[project]
name = "comfyui-frame-interpolation"
description = "Nodes: KSampler Gradually Adding More Denoise (efficient)"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Fannovel16/ComfyUI-Frame-Interpolation"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Frame-Interpolation"
Icon = ""
