[project]
name = "comfyui-frame-interpolation"
description = "A custom node suite for Video Frame Interpolation in ComfyUI"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Fannovel16/ComfyUI-Frame-Interpolation"

[tool.comfy]
PublisherId = "fannovel16"
DisplayName = "ComfyUI-Frame-Interpolation"
Icon = ""
