[project]
name = "comfyui-frame-interpolation"
description = "A custom node suite for Video Frame Interpolation in ComfyUI"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/darksidewalker/ComfyUI-Frame-Interpolation"

[tool.comfy]
PublisherId = "darksidewalker"
DisplayName = "ComfyUI-Frame-Interpolation"
Icon = ""
